# ROS2_Myo_Franka

./: README.md  combined_data_df_output.csv  initial_data_df_output.csv  plot_H_r1deg0h0_EMG.py  plot_R_r1deg0h0.py  plot_imu.py  vis.py  vis_imu.py  vis_imu2.py  x_pred_output.csv
HumanElbowData/H_r1deg0h0/: H_r1deg0h0.mat  H_r1deg0h0_0.mcap  _RL_myo_emg.csv  _RU_myo_imu.csv  align_data.py  plot_cb.py  plot_emg.py
HumanElbowData/H_r1deg0h0/H_r1degh0_db3/: H_r1degh0_db3_0.db3  metadata.yaml
HumanElbowData/h0/H_r1deg0h0/: _RL_myo_imu.csv  _RU_myo_emg.csv  metadata.yaml  plot_cb.py  plot_imu.py  rosbag2csv.py
HumanElbowData/h0/H_r1deg112h0/: H_r1deg112h0_0.mcap  metadata.yaml
HumanElbowData/h0/H_r1deg135h0/: H_r1deg135h0_0.mcap  metadata.yaml
HumanElbowData/h0/H_r1deg157h0/: H_r1deg157h0_0.mcap  metadata.yaml
HumanElbowData/h0/H_r1deg180h0/: H_r1deg180h0_0.mcap  metadata.yaml
HumanElbowData/h0/H_r1deg22h0/: H_r1deg22h0_0.mcap  metadata.yaml
HumanElbowData/h0/H_r1deg45h0/: H_r1deg45h0_0.mcap  metadata.yaml
my_bagfile/: metadata.yaml  my_bagfile_0.db3
ws/connect_myo/: package.xml  setup.cfg  setup.py
ws/integrate_robot_human/: package.xml  setup.cfg  setup.py
ws/pick_place_interface/: CMakeLists.txt  package.xml
ws/pickmeup/: package.xml  setup.py
ws/pickmeup/launch/: grab_object.launch.xml  open_franka.launch.xml
ws/pickmeup/pickmeup/: calculate.py  delay_node.py  pick_place.py  pick_place_orri.py  run.py  testrun.py
ws/robot_control/: CMakeLists.txt  package.xml
ws/ros_myo_interfaces/: CMakeLists.txt  package.xml
(+219 files in other folders)
