<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pickmeup</name>
  <version>0.0.0</version>
  <description>Pkg for control robot pick and place</description>
  <maintainer email="jialuyu2024@u.northwestern.edu">jialuyu</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <exec_depend>moveit_wrapper</exec_depend>

  <exec_depend>rviz2</exec_depend>
  <exec_depend>moveitapi</exec_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  
  <exec_depend>pick_place_interface</exec_depend>
  <build_depend>pick_place_interface</build_depend>

  <!-- <exec_depend>franka_moveit_config</exec_depend> -->
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>